Improved and finalised validation, improved pagination , finished basis of the book entity.